fix part op btn align

--- a/resources/installer/css/part.css
+++ b/resources/installer/css/part.css
@@ -341,7 +341,7 @@
     width:110px;
     height:22px;
     line-height:22px;
-    margin:0 10px 0 20px;
+    margin:0 0 0 20px;
     border:1px solid rgba(0,0,0,0.3);
     border-radius:5px;
 }
@@ -356,6 +356,7 @@
 
 #part_loader {
     float:left;
+    margin-left:0;
     pointer-events:auto;
 }
 
